@@ -97,6 +97,54 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|tools
+operator|.
+name|ant
+operator|.
+name|types
+operator|.
+name|Mapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|tools
+operator|.
+name|ant
+operator|.
+name|util
+operator|.
+name|FileNameMapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|tools
+operator|.
+name|ant
+operator|.
+name|util
+operator|.
+name|GlobPatternMapper
+import|;
+end_import
+
+begin_import
+import|import
 name|fr
 operator|.
 name|jayasoft
@@ -656,23 +704,6 @@ argument_list|(
 name|_conf
 argument_list|)
 decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|confs
-operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
-block|{
 if|if
 condition|(
 name|_xsl
@@ -680,8 +711,6 @@ condition|)
 block|{
 name|genreport
 argument_list|(
-name|ivy
-argument_list|,
 name|_cache
 argument_list|,
 name|_organisation
@@ -689,9 +718,6 @@ argument_list|,
 name|_module
 argument_list|,
 name|confs
-index|[
-name|i
-index|]
 argument_list|)
 expr_stmt|;
 block|}
@@ -702,8 +728,6 @@ condition|)
 block|{
 name|genxml
 argument_list|(
-name|ivy
-argument_list|,
 name|_cache
 argument_list|,
 name|_organisation
@@ -711,9 +735,6 @@ argument_list|,
 name|_module
 argument_list|,
 name|confs
-index|[
-name|i
-index|]
 argument_list|)
 expr_stmt|;
 block|}
@@ -724,8 +745,6 @@ condition|)
 block|{
 name|gengraph
 argument_list|(
-name|ivy
-argument_list|,
 name|_cache
 argument_list|,
 name|_organisation
@@ -733,12 +752,8 @@ argument_list|,
 name|_module
 argument_list|,
 name|confs
-index|[
-name|i
-index|]
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 block|}
 catch|catch
@@ -762,9 +777,6 @@ specifier|private
 name|void
 name|genxml
 parameter_list|(
-name|Ivy
-name|ivy
-parameter_list|,
 name|File
 name|cache
 parameter_list|,
@@ -775,10 +787,28 @@ name|String
 name|module
 parameter_list|,
 name|String
-name|conf
+index|[]
+name|confs
 parameter_list|)
 throws|throws
 name|IOException
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|confs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
 block|{
 name|File
 name|xml
@@ -800,7 +830,10 @@ argument_list|,
 name|module
 argument_list|)
 argument_list|,
-name|conf
+name|confs
+index|[
+name|i
+index|]
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -839,7 +872,10 @@ literal|""
 argument_list|,
 literal|"xml"
 argument_list|,
-name|conf
+name|confs
+index|[
+name|i
+index|]
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -869,7 +905,10 @@ literal|""
 argument_list|,
 literal|"xml"
 argument_list|,
-name|conf
+name|confs
+index|[
+name|i
+index|]
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -886,13 +925,11 @@ literal|null
 argument_list|)
 expr_stmt|;
 block|}
+block|}
 specifier|private
 name|void
 name|genreport
 parameter_list|(
-name|Ivy
-name|ivy
-parameter_list|,
 name|File
 name|cache
 parameter_list|,
@@ -903,7 +940,8 @@ name|String
 name|module
 parameter_list|,
 name|String
-name|conf
+index|[]
+name|confs
 parameter_list|)
 throws|throws
 name|IOException
@@ -937,15 +975,43 @@ operator|.
 name|init
 argument_list|()
 expr_stmt|;
+name|Mapper
+name|mapper
+init|=
+operator|new
+name|Mapper
+argument_list|(
+name|getProject
+argument_list|()
+argument_list|)
+decl_stmt|;
 name|xslt
 operator|.
-name|setIn
+name|addMapper
 argument_list|(
-operator|new
-name|File
-argument_list|(
-name|cache
-argument_list|,
+name|mapper
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|confs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|String
+name|reportFileName
+init|=
 name|XmlReportOutputter
 operator|.
 name|getReportFileName
@@ -958,57 +1024,36 @@ argument_list|,
 name|module
 argument_list|)
 argument_list|,
-name|conf
+name|confs
+index|[
+name|i
+index|]
 argument_list|)
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|File
-name|out
 decl_stmt|;
-if|if
-condition|(
-name|_todir
-operator|!=
-literal|null
-condition|)
-block|{
-name|out
-operator|=
-operator|new
-name|File
-argument_list|(
-name|_todir
-argument_list|,
-name|IvyPatternHelper
+name|xslt
 operator|.
-name|substitute
+name|setIncludes
 argument_list|(
-name|_outputpattern
-argument_list|,
-name|organisation
-argument_list|,
-name|module
-argument_list|,
-literal|""
-argument_list|,
-literal|""
-argument_list|,
-literal|""
-argument_list|,
-name|_xslext
-argument_list|,
-name|conf
-argument_list|)
+name|reportFileName
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
-name|out
-operator|=
+name|FileNameMapper
+name|reportMapper
+init|=
 operator|new
-name|File
+name|GlobPatternMapper
+argument_list|()
+decl_stmt|;
+name|reportMapper
+operator|.
+name|setFrom
+argument_list|(
+name|reportFileName
+argument_list|)
+expr_stmt|;
+name|reportMapper
+operator|.
+name|setTo
 argument_list|(
 name|IvyPatternHelper
 operator|.
@@ -1028,70 +1073,57 @@ literal|""
 argument_list|,
 name|_xslext
 argument_list|,
-name|conf
+name|confs
+index|[
+name|i
+index|]
 argument_list|)
 argument_list|)
 expr_stmt|;
-block|}
-if|if
-condition|(
-name|out
+name|mapper
 operator|.
-name|getParentFile
-argument_list|()
-operator|!=
-literal|null
-operator|&&
-operator|!
-name|out
-operator|.
-name|getParentFile
-argument_list|()
-operator|.
-name|exists
-argument_list|()
-condition|)
-block|{
-name|out
-operator|.
-name|getParentFile
-argument_list|()
-operator|.
-name|mkdirs
-argument_list|()
-expr_stmt|;
-block|}
-if|else if
-condition|(
-name|out
-operator|.
-name|getParentFile
-argument_list|()
-operator|==
-literal|null
-condition|)
-block|{
-name|out
-operator|=
-operator|new
-name|File
+name|add
 argument_list|(
-literal|"./"
-operator|+
-name|out
-operator|.
-name|getPath
-argument_list|()
+name|reportMapper
 argument_list|)
 expr_stmt|;
 block|}
 name|xslt
 operator|.
-name|setOut
+name|setBasedir
 argument_list|(
-name|out
+name|cache
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|_todir
+operator|!=
+literal|null
+condition|)
+block|{
+name|xslt
+operator|.
+name|setDestdir
+argument_list|(
+name|_todir
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|xslt
+operator|.
+name|setDestdir
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"."
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 name|xslt
 operator|.
 name|setStyle
@@ -1362,9 +1394,6 @@ specifier|private
 name|void
 name|gengraph
 parameter_list|(
-name|Ivy
-name|ivy
-parameter_list|,
 name|File
 name|cache
 parameter_list|,
@@ -1375,7 +1404,8 @@ name|String
 name|module
 parameter_list|,
 name|String
-name|conf
+index|[]
+name|confs
 parameter_list|)
 throws|throws
 name|IOException
@@ -1449,17 +1479,43 @@ argument_list|(
 name|cache
 argument_list|)
 expr_stmt|;
+name|Mapper
+name|mapper
+init|=
+operator|new
+name|Mapper
+argument_list|(
+name|getProject
+argument_list|()
+argument_list|)
+decl_stmt|;
 name|xslt
 operator|.
-name|setExtension
+name|addMapper
 argument_list|(
-literal|".graphml"
+name|mapper
 argument_list|)
 expr_stmt|;
-name|xslt
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|confs
 operator|.
-name|setIncludes
-argument_list|(
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|String
+name|reportFileName
+init|=
 name|XmlReportOutputter
 operator|.
 name|getReportFileName
@@ -1472,10 +1528,70 @@ argument_list|,
 name|module
 argument_list|)
 argument_list|,
-name|conf
+name|confs
+index|[
+name|i
+index|]
+argument_list|)
+decl_stmt|;
+name|xslt
+operator|.
+name|setIncludes
+argument_list|(
+name|reportFileName
+argument_list|)
+expr_stmt|;
+name|FileNameMapper
+name|reportMapper
+init|=
+operator|new
+name|GlobPatternMapper
+argument_list|()
+decl_stmt|;
+name|reportMapper
+operator|.
+name|setFrom
+argument_list|(
+name|reportFileName
+argument_list|)
+expr_stmt|;
+name|reportMapper
+operator|.
+name|setTo
+argument_list|(
+name|IvyPatternHelper
+operator|.
+name|substitute
+argument_list|(
+name|_outputpattern
+argument_list|,
+name|organisation
+argument_list|,
+name|module
+argument_list|,
+literal|""
+argument_list|,
+literal|""
+argument_list|,
+literal|""
+argument_list|,
+literal|"graphml"
+argument_list|,
+name|confs
+index|[
+name|i
+index|]
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|mapper
+operator|.
+name|add
+argument_list|(
+name|reportMapper
+argument_list|)
+expr_stmt|;
+block|}
 name|xslt
 operator|.
 name|setStyle
