@@ -49,6 +49,7 @@ Changes:
   - NEW: add option to cachepath task to create a path with local artifact paths (IVY-221)
   - NEW: allow extending configurations to override the mapping of their super configurations (IVY-218)
 
+  - IMPROVE: report Ant-task doesn't process the reports in batch (IVY-247)
   - IMPROVE: make ReportOutputter pluggable and customizable (IVY-205)
   - IMPROVE: add wildcard support for extending configurations (IVY-235)
   - IMPROVE: add support for xslt parameters in the report task (IVY-227)
@@ -56,6 +57,7 @@ Changes:
   - IMPROVE: add sort of 'fallback'-mapping to the defaultconfmapping attribute (IVY-215)
   - IMPROVE: artifact origin is not included in the default report (IVY-251)
 
+  - FIX: report Ant-task doesn't use outputpattern for generating graphml reports (IVY-246)
   - FIX: report Ant-task doesn't call init() on the internal XSLTProcess (IVY-248)
   - FIX: value of confmappingoverride from imported configurations is lost when writing Ivy file (IVY-239)
   - FIX: including configurations doesn't import the confmappingoverride setting (IVY-238)
